chore(ebook): 修复线上接口

--- a/.env.production
+++ b/.env.production
@@ -1,4 +1,4 @@
-VUE_APP_RES_URL=http://47.115.137.178/book/res
+VUE_APP_RES_URL=http://47.115.137.178
 VUE_APP_EPUB_URL=http://47.115.137.178/epub
 VUE_APP_BASE_URL=http://47.115.137.178:3000
 VUE_APP_BOOK_URL=http://47.115.137.178:3000
